hphp/test/zend/good/ext/date/tests/timezone-configuration.php
<?php
	date_default_timezone_set('Europe/Oslo');
	echo strtotime("2005-06-18 22:15:44"), "\n";

	date_default_timezone_set('Europe/London');
	echo strtotime("2005-06-18 22:15:44"), "\n";

	date_default_timezone_set('Europe/Oslo');
	echo strtotime("2005-06-18 22:15:44"), "\n";
?>